[project]
name = "learn-to-build-openclaw"
version = "0.1.0"
description = "Learn to Build OpenClaw Workshop - Build a persistent AI assistant from scratch using OpenRouter (qwen3-coder)"
authors = [{ name = "Param Harrison", email = "param@learnwithparam.com" }]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50.0",
    "python-telegram-bot>=21.0",
    "flask>=3.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
